<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_left_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/left_top_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="20dp" >

        <ImageButton
            android:id="@+id/left_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/user_default_img" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@+id/left_user_icon"
            android:gravity="center"
            android:text="@string/default_user_name_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tab_news"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/create_icon"
            android:text="@string/create_name_text" />
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#058ca2"/>
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#34cce3"/>
        <TextView
            android:id="@+id/tab_read"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/keep_icon"
            android:text="@string/keep_name" />
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#058ca2"/>
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#34cce3"/>
        <TextView
            android:id="@+id/tab_local"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/send_icon"
            android:text="@string/send_text" />
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#058ca2"/>
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#34cce3"/>
        <TextView
            android:id="@+id/tab_ties"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/clear_icon"
            android:text="@string/clear_text" />
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#058ca2"/>
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#34cce3"/>
        <TextView
            android:id="@+id/tab_pics"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/version_icon"
            android:text="@string/version_text" />
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#058ca2"/>
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#34cce3"/>
        <TextView
            android:id="@+id/tab_focus"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/share_icon"
            android:text="@string/share_text" />
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#058ca2"/>
		<View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="#34cce3"/>
        <TextView
            android:id="@+id/tab_vote"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/about_icon"
            android:text="@string/about_text" />
    </LinearLayout>

</LinearLayout>