<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/menu_left_frag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#eee0da"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="left"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <org.kymjs.kjframe.widget.RoundImageView
                    android:id="@+id/left_user_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@mipmap/user_default_img"/>

                <ImageView
                    android:id="@+id/iv_is_vip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:src="@mipmap/vip"
                    android:visibility="gone"/>
            </FrameLayout>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/default_user_name_text"
                android:textColor="@color/divider"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_create_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/create_icon"
            android:text="@string/create_name_text"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e7e3e2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/my_keep_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/keep_icon"
            android:visibility="gone"
            android:text="@string/keep_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone"
            android:background="#e7e3e2"/>

        <TextView
            android:id="@+id/send_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/send_icon"
            android:text="@string/send_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e7e3e2"/>

        <TextView
            android:id="@+id/clear_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/clear_icon"
            android:text="@string/clear_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e7e3e2"/>

        <TextView
            android:id="@+id/version_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/version_icon"
            android:text="@string/version_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e7e3e2"/>

        <TextView
            android:id="@+id/share_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/share_icon"
            android:text="@string/share_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e7e3e2"/>

        <TextView
            android:id="@+id/about_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/about_icon"
            android:text="@string/about_text"/>

        <View
            android:id="@+id/login_out_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e7e3e2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/login_out_tv"
            style="@style/tab_style"
            android:drawableLeft="@mipmap/login_out_icon"
            android:text="@string/login_out_text"
            android:visibility="gone"/>
    </LinearLayout>

</FrameLayout>