<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/common_back"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/user_login_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/hint_register_name_text"
            android:textColor="@color/forget_text_color"
            android:textColorHint="@color/common_color"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/user_password_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/hint_password_text"
            android:textColor="@color/forget_text_color"
            android:textColorHint="@color/common_color"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/confirm_password_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/hint_confirm_password_text"
            android:textColor="@color/forget_text_color"
            android:textColorHint="@color/common_color"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/common_selector"
            android:text="@string/regester_btn_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/to_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/have_account_text"
            android:textColor="@color/forget_text_color"
            android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>
