<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

    <LinearLayout
        android:id="@+id/menu_left_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/my_info_bg"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/user_info_layout"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/left_user_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@mipmap/user_default_img"/>

                    <ImageView
                        android:id="@+id/iv_is_vip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:src="@mipmap/vip"
                        android:visibility="gone"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="2dp"
                    android:text="@string/default_user_name_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_create_tv"
                style="@style/tab_style"
                android:drawableLeft="@mipmap/create_icon"
                android:text="@string/create_name_text"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/more_line_color"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/my_keep_tv"
                style="@style/tab_style"
                android:drawableLeft="@mipmap/keep_icon"
                android:text="@string/keep_name"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/order_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/order_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/order_icon"
                    android:text="@string/order_info_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"/>

            <RelativeLayout
                android:id="@+id/send_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/send_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/send_icon"
                    android:text="@string/send_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"/>

            <RelativeLayout
                android:id="@+id/clear_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/clear_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/clear_icon"
                    android:text="@string/clear_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"/>

            <RelativeLayout
                android:id="@+id/version_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/version_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/version_icon"
                    android:text="@string/version_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"/>

            <RelativeLayout
                android:id="@+id/share_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/share_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/share_icon"
                    android:text="@string/share_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"/>

            <RelativeLayout
                android:id="@+id/weixin_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/weixin_add_icon"
                    android:text="@string/weixin_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"/>

            <RelativeLayout
                android:id="@+id/about_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/about_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/about_icon"
                    android:text="@string/about_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>

            <View
                android:id="@+id/login_out_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/more_line_color"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground"
                android:visibility="gone">

                <TextView
                    android:id="@+id/login_out_tv"
                    style="@style/tab_style"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:drawableLeft="@mipmap/logout_icon"
                    android:text="@string/login_out_text"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="false"
                    android:src="@mipmap/common_right_icon"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>